# Nvim-config

./: .gitignore  .prettierrc.toml  Cargo.toml  README.md  TODO.md  clang-formatter.yaml  init.lua  justfile  lazy-lock.json  one.lua  readme.md
lua/: lazyMain.lua  utils.lua
lua/config/: anchor.lua  autocmd.lua  codeRunner.lua  command.lua  filetype.lua  main.lua  misc.lua  neovide.lua  neovideConfig.lua  options.lua  remap.lua  uiuaPad.lua
lua/config/theme/: colors.lua  delimit.lua  fidget.lua  hop.lua  indent.lua  lazy.lua  main.lua  markdown.lua  status.lua  syntax.lua  telescope.lua
lua/config/theme/plugins/: delimit.lua  indent.lua  lazy.lua  status.lua  (+2 more)
lua/helper/: float.lua  floatie.lua  mode.lua  modes.lua  utils.lua  window.lua
lua/phugin/: editor.lua  git.lua  lsp.lua  telescope.lua  tree-sitter.lua  undo-tree.lua  which-key.lua
lua/plugin/: autopair.lua  editor.lua  formatter.lua  game.lua  git.lua  lsp-lines.lua  lsp.lua  markdown.lua  math.lua  mini.lua  movement.lua  neorg.lua  oil.lua  retirement.lua  spectre.lua  surround.lua  telescope.lua  tree-sitter.lua  undo-tree.lua  which-key.lua
lua/plugins/: autopairs.lua  conform.lua  editor.lua  formatter.lua  git.lua  hop.lua  lsp.lua  markdown.lua  mini.lua  movement.lua  oil.lua  screenkey.lua  surround.lua  telescope.lua  treesitter.lua  undotree.lua
spell/: en.utf-8.add  en.utf-8.add.spl
src/: autocmds.rs  commands.rs  diagnostic.rs  keymaps.rs  lazy.rs  lib.rs  lsp.rs  macros.rs  options.rs  theme.rs
src/lazy/: formatter.rs  plugins.rs  snacks.rs
src/theme/: blink_cmp.rs  syntax.rs
