[package]
name = "config"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

missing-errors-doc = "allow"
missing-panics-doc = "allow"
enum-glob-use = "allow"
wildcard-imports = "allow"
struct-excessive-bools = "allow"
wildcard_imports = "allow"

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.10.5", features = ["luajit", "vendored", "macros"] }
nvim-oxi = {version = "0.6.0", features = ["neovim-0-11", "mlua"]}
